[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=1]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=2]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=6]
[ext_resource path="res://scenes/Felpudo.gd" type="Script" id=7]
[ext_resource path="res://assets/fundo.png" type="Texture" id=8]
[ext_resource path="res://scenes/pipe.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/generator.gd" type="Script" id=10]
[ext_resource path="res://scenes/game.gd" type="Script" id=11]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/sound/somScore.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/somHit.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sound/somVoa.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "BackAnim"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundAnim/Sprite1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1000, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackgroundAnim/Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1000, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 84.977
height = 45.8658

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 1002.56, -0.188965 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 1002.38, -0.0463867 )

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 12 )

[node name="GameNode" type="Node2D"]
script = ExtResource( 11 )

[node name="BackgroundAnim" type="AnimationPlayer" parent="."]
autoplay = "BackAnim"
anims/BackAnim = SubResource( 1 )

[node name="Sprite1" type="Sprite" parent="BackgroundAnim"]
scale = Vector2( 3.8, 3.8 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite2" type="Sprite" parent="BackgroundAnim"]
position = Vector2( 1000.37, -0.374577 )
scale = Vector2( 3.8, 3.8 )
texture = ExtResource( 8 )
centered = false

[node name="Felpudo" type="RigidBody2D" parent="."]
position = Vector2( 174.082, 715.816 )
z_index = 1
mode = 2
gravity_scale = 18.0
script = ExtResource( 7 )

[node name="FelpudoAnim" type="AnimatedSprite" parent="Felpudo"]
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 2 )
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Felpudo"]
position = Vector2( 16.168, -3.18738 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="SoundTouch" type="AudioStreamPlayer" parent="Felpudo"]
stream = ExtResource( 15 )

[node name="Limits" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits"]
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Limits"]
position = Vector2( 0, 1700 )
shape = SubResource( 5 )

[node name="Pipes" type="Node2D" parent="."]
z_index = -1

[node name="Pipe" parent="Pipes" instance=ExtResource( 9 )]
position = Vector2( 1250.82, 584.43 )

[node name="Generator" type="Position2D" parent="Pipes"]
position = Vector2( 1251, 584 )
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Pipes/Generator"]
wait_time = 1.75
autostart = true

[node name="TimeToReplay" type="Timer" parent="."]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 455, 50 )
z_index = 3

[node name="Control" type="Control" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Node2D/Control"]
margin_left = -453.0
margin_right = 541.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="SoundScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
[connection signal="timeout" from="Pipes/Generator/Timer" to="Pipes/Generator" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimeToReplay" to="." method="_on_TimeToReplay_timeout"]
